--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack-cli": "^3.3.10"
   }
 }
