--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "learning webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config build/webpack.config.js"
+    "build": "webpack --config build/webpack.config.js",
+    "dev": "webpack-dev-server --color --progress build/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
