--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config build/webpack.config.js",
-    "dev": "webpack-dev-server --color --progress build/webpack.config.js"
+    "dev": "webpack-dev-server --color --progress --config build/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,12 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.2",
+    "vue-template-compiler": "^2.6.10",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
