--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
