--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sugarss": "^2.0.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
