--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^1.0.0",
     "sugarss": "^2.0.0",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.3",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
     "vue-router": "^3.1.3",
